--- a/gulpetl-target-csv.html
+++ b/gulpetl-target-csv.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
     RED.nodes.registerType('gulpetl-target-csv',{
         category: 'gulpetl',
-        // color: '#A7579D',
+        color: '#A7579D',
         // color: '#F9258E',
-        color: '#3386BB',        
+        // color: '#3386BB',
         defaults: {
             name: {value:""}
         },
@@ -28,9 +28,9 @@
 </script>
 
 <script type="text/html" data-help-name="gulpetl-target-csv">
-    <p>Converts a gulp-etl Message Stream to a .csv file
+    <p>Converts a gulp-etl Message Stream to CSV lines
         <br>
-        <br>Input: ...
-        <br>Output: ...
+        <br><b>Input</b>: NDJSON lines (as a string or Buffer of newline-delimited lines, an array of objects, or an array of strings)
+        <br><b>Output</b>: CSV lines (as a newline-delimited string)
     </p>
 </script>
