Tweaks; now ready to work in full gulp streaming mode

--- a/gulpetl-target-csv.html
+++ b/gulpetl-target-csv.html
@@ -1,22 +1,24 @@
 <script type="text/javascript">
     RED.nodes.registerType('gulpetl-target-csv',{
         category: 'gulpetl',
-        color: '#A7579D',
+        // color: '#A7579D',
         // color: '#F9258E',
-        // color: '#3386BB',
+        color: '#3386BB',
         defaults: {
             name: {value:""}
         },
         inputs: 1,
         outputs: 1,
-        icon: "file.svg",
+        // icon: "file.svg",
+        icon: "font-awesome/fa-file-text-o",
         label: function() {
             return this.name||"gulpetl-target-csv";
         },
         paletteLabel: function() {
-            return this.name||"target-csv";
-        },
-
+            // use small non-breaking dash character for visual presentation-- avoids the breaks node-red inserts around regular dashes in the palette - https://www.compart.com/en/unicode/category/Pd
+            return "target-csv".replace("-","\u2011");
+        },        
+        align:"right"
     });
 </script>
 
