Converting ndjson references to jsonl; initial package updates

--- a/gulpetl-target-csv.html
+++ b/gulpetl-target-csv.html
@@ -86,7 +86,7 @@
 <script type="text/html" data-help-name="gulpetl-target-csv">
     <p>Converts a gulp-etl Message Stream to CSV lines
         <br>
-        <br><b>Input</b>: NDJSON lines (as a string or Buffer of newline-delimited lines, an array of objects, or an array of strings)
+        <br><b>Input</b>: JSONL lines (as a string or Buffer of newline-delimited lines, an array of objects, or an array of strings)
         <br><b>Output</b>: CSV lines (as a newline-delimited string)
     </p>
 </script>
